<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/toolbarcolor">


<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/toolbarcolor">
   <include
       android:id="@+id/toolbar"
       layout="@layout/toolbar"/>



    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/chapter1"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:background="@color/toolbarcolor">
            <LinearLayout
                android:background="@color/toolbarcolor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView

                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorAccent"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_of_chapter1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter1"
                    android:textColor="#ffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:background="@color/toolbarcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/electric_charges_and_fields"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/chapter2"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:focusable="true"
            android:background="@color/toolbarcolor">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/toolbarcolor">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/green"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_of_chapter1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter_2"
                    android:textColor="#ffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/electrostatic_potential_and_capacitance"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/chapter3"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/toolbarcolor">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_of_chapter1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter_3"
                    android:textColor="#ffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/current_electricity"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>



            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/chapter4"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/toolbarcolor">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/green"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_of_chapter1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter_4"
                    android:textColor="#ffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/magnetic_effect_of_current"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/chapter5"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/toolbarcolor">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/pink"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_of_chapter1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter_5"
                    android:textColor="#ffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/magnetism"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/chapter6"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/toolbarcolor">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:contentDescription="@string/image_of_chapter1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter_6"
                    android:textStyle="bold"
                    android:textColor="#ffff"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/electromagnatic_induction"
                    android:textColor="@android:color/darker_gray" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/chapter7"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="330dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:focusable="true">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/toolbarcolor">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorAccent"
                    android:src="@drawable/outline_menu_book_black_18dp"
                    android:padding="10dp"
                    android:contentDescription="@string/image_of_chapter1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/chapter_7"
                    android:textColor="#ffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/alternating_current"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>




</LinearLayout>
</androidx.core.widget.NestedScrollView>